src/app/components/Header.module.scss
/* src/app/components/Header.module.scss */

/* Variables */
$color-black-overlay: #1725424d;
$color-hover: #179cf7;
$color-neutral-medium: rgba(50, 63, 87, 0.5);
$color-white: #ffffff;
$spacing-small: 8px;
$spacing-medium: 16px;
$spacing-large: 24px;
$border-radius: 16px;
$border-radius-hover: 10px;
$border-width: 1px;
$box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
$breakpoint-small: 768px;

/* Posicionamiento del Header */
.position {
    display: block;
    position: fixed; /* Cambiado de sticky a fixed */
    top: 0;
    left: 0;
    right: 0;
    z-index: 100;
    padding: $spacing-medium;

    @media (max-width: $breakpoint-small) {
        position: fixed;
        top: 0;
        bottom: auto;
    }
}

/* Contenedor Principal del Header */
.headerContainer {
    display: flex;
    justify-content: space-between; /* Mejor distribución */
    align-items: center;
    max-width: 1200px; /* Ajustado a un valor más razonable */
    margin: 0 auto;
    width: 100%;
    padding: 0 $spacing-medium; /* Añadido padding horizontal */
    opacity: 90%; /* 90% de opacidad */
}

/* Secciones Izquierda y Derecha */
.leftSection,
.rightSection {
    display: flex;
    align-items: center;
}

/* Sección de Navegación */
.navSection {
    // flex: 1;
    display: flex;
    justify-content: center;
    background-color: $color-black-overlay;
    border: $border-width solid $color-neutral-medium;
    border-radius: $border-radius;
    box-shadow: $box-shadow;
    padding: $spacing-small;
    backdrop-filter: blur(1rem);
    -webkit-backdrop-filter: blur(1rem);
}

.navContainer {
    display: flex;
    gap: 1rem;

    /* Eliminado flex-direction: column para mantener horizontal en móviles */
    /*
    @media (max-width: $breakpoint-small) {
        flex-direction: column;
        align-items: center;
    }
    */

    /* Opcional: Ajustes adicionales para móviles sin cambiar la dirección */
    @media (max-width: $breakpoint-small) {
        justify-content: space-around;
        /* Otros ajustes según sea necesario */
    }
}

/* Contenedor de Cada Menú */
.menuContainer {
    position: relative;
    

    &:hover .dropdownMenu {
        visibility: visible;
        opacity: 1;
        transform: translateY(0);
    }

    @media (max-width: $breakpoint-small) {
        width: 100%;
        text-align: center;
    }
}

/* Botón de Navegación */
.toggleButton {
    padding: 2px 8px;
    height: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: none;
    border: none;
    cursor: pointer;
    color: $color-white;
    font-size: 1rem;
    transition: color 0.3s ease;

    &.selected {
        color: $color-hover;
    }

    &:hover {
        color: $color-hover;
    }

    @media (max-width: $breakpoint-small) {
        width: 100%;

        /* Ocultar el texto en vista móvil */
        .buttonText {
            display: none;
        }

        /* Ajustar padding si es necesario */
        padding: 2px; /* Reducir el padding para iconos más pequeños */
    }
}

/* Bridge para Posicionamiento del Dropdown */
.bridge {
    position: absolute;
    top: calc(100% + 1px); /* Justo debajo del botón */
    left: 0;
    height: 15px;
    width: 100%;
    background-color: transparent;
    z-index: 150;

    @media (max-width: $breakpoint-small) {
        top: auto; /* Elimina el `top` en móviles */
        bottom: calc(100% + 1px); /* Coloca el `bridge` justo arriba del menú */
        height: 15px; /* Aumenta la altura si es necesario para cubrir el espacio */
        width: 100%; /* Asegura que cubra toda el área sobre el menú */
        left: 0;
    }
}

/* Menú Desplegable */
.dropdownMenu {
    visibility: hidden;
    opacity: 0;
    transform: translateY(-10px);
    transition: visibility 0s, opacity 0.3s ease, transform 0.3s ease;
    position: absolute;
    top: calc(100% + 12px);
    left: -10px; /* Alineado correctamente */
    background-color: rgba(21, 21, 21, 0.8);
    border: $border-width solid rgba(87, 86, 86, 0.5);
    border-radius: $border-radius;
    box-shadow: $box-shadow;
    padding: $spacing-small;
    z-index: 200;
    min-width: 150px;
    // backdrop-filter: blur(10px);
    // -webkit-backdrop-filter: blur(10px);

    &.visible {
        visibility: visible;
        opacity: 1;
        transform: translateY(0);
        transition-delay: 0s;
    }

    &.above {
        top: auto;
        bottom: calc(100% + 8px);
    }

    a,
    .dropdownItem {
        display: flex;
        align-items: center;
        /* Ajustar display a flex para alinear iconos si los hay */

        /* Ocultar el texto en vista móvil */
        @media (max-width: $breakpoint-small) {
            .dropdownText {
                display: none;
            }
        }
    }

    a {
        /* Estilos existentes para los enlaces */
        display: block;
        padding: 8px 16px;
        color: $color-white;
        text-decoration: none;
        text-align: right;
        border-radius: 0;

        &:hover {
            background-color: $color-hover;
            color: $color-white;
            border-radius: $border-radius-hover;
        }

        &:active {
            color: $color-white;
        }

        @media (max-width: $breakpoint-small) {
            text-align: center;
        }
    }

    @media (max-width: $breakpoint-small) {
        display: none; /* Removido para mantener visibilidad */
    }
}

/* Clase para Dropdown Visible */
.dropdownMenuVisible {
    visibility: visible;
    opacity: 1;
    transform: translateY(0);
    transition-delay: 0s;
}

/* Clase para Dropdown Posicionado Arriba */
.dropdownAbove {
    top: auto;
    bottom: calc(100% + 8px);
}

/* Clase para Botón Seleccionado */
.selected {
    color: $color-hover;
}

/* Definición para .dropdownItem */
.dropdownItem {
    display: block;
    padding: 8px 16px;
    color: $color-white;
    text-decoration: none;
    text-align: right;
    border-radius: 0;

    &:hover {
        background-color: $color-hover;
        color: $color-white;
        border-radius: $border-radius-hover;
    }

    &:active {
        color: $color-white;
    }

    @media (max-width: $breakpoint-small) {
        text-align: center;

        /* Ocultar el texto en vista móvil */
        .dropdownText {
            display: none;
        }
    }
}

